--- a/client/app/index.html
+++ b/client/app/index.html
@@ -39,14 +39,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#/">ConceptVector</a>
+          <a class="navbar-brand" href="#/">EssayIQ</a>
         </div>
         <div class="collapse navbar-collapse" id="js-navbar-collapse">
           <ul class="nav navbar-nav">
             <li ng-class="{ active: isActive('/')}"><a href="#/">Home</a></li>
-            <li ng-class="{ active: isActive('/concepts')}"><a ng-href="#/concepts">Concepts</a></li>
-            <li ng-class="{ active: isActive('/articles')}"><a ng-href="#/articles">NY Times</a></li>
-            <li ng-class="{ active: isActive('/twitter')}"><a ng-href="#/twitter">Twitter</a></li>
+            <!--<li ng-class="{ active: isActive('/concepts')}"><a ng-href="#/concepts">Concepts</a></li> -->
+            <li ng-class="{ active: isActive('/assignments')}"><a ng-href="#/assignments">Assignments</a></li>
+            <!-- <li ng-class="{ active: isActive('/articles')}"><a ng-href="#/articles">NY Times</a></li> -->
+            <li ng-class="{ active: isActive('/submissions')}"><a ng-href="#/submissions">Submissions</a></li>
+            <!--<li ng-class="{ active: isActive('/twitter')}"><a ng-href="#/twitter">Twitter</a></li> -->
+            <li ng-class="{ active: isActive('/themes')}"><a ng-href="#/themes">Themes</a></li>
             <li ng-class="{ active: isActive('/about')}"><a ng-href="#/about">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -67,7 +70,7 @@
   <div ng-view=""></div>
   <div class="footer">
     <div class="container">
-      <p><span class="glyphicon glyphicon-heart"></span> from the Conceptvector Team</p>
+      <p><span class="glyphicon glyphicon-heart"></span> from the EssayIQ Team</p>
     </div>
   </div>
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -121,8 +124,19 @@
   <script src="scripts/controllers/navbar.js"></script>
   <script src="scripts/controllers/register.js"></script>
   <script src="scripts/controllers/conceptlist.js"></script>
+  <script src="scripts/controllers/assignmentlist.js"></script>
+  <script src="scripts/controllers/assignmentdetail.js"></script>
+  <script src="scripts/controllers/submissionlist.js"></script>
+  <script src="scripts/controllers/submissionpage.js"></script>
+  <script src="scripts/controllers/analyzesubmission.js"></script>
+  <script src="scripts/controllers/analyzewholesubmissions.js"></script>
+  <script src="scripts/controllers/annotatewholesubmissions.js"></script>
+  <script src="scripts/controllers/themelist.js"></script>
+  <script src="scripts/controllers/themeadd.js"></script>
   <script src="scripts/controllers/conceptdetail.js"></script>
   <script src="scripts/controllers/deletemodal.js"></script>
+  <script src="scripts/controllers/sentenceDialog.js"></script>
+  <script src="scripts/controllers/annotatesentence.js"></script>
   <script src="scripts/controllers/commentdemo.js"></script>
   <script src="scripts/directives/dd-text-collapse.js"></script>
   <script src="scripts/directives/gatherplot.js"></script>
@@ -137,6 +151,9 @@
   <script src="scripts/controllers/articles.js"></script>
   <script src="scripts/filters/highlight.js"></script>
   <script src="scripts/directives/dirhighlight.js"></script>
+  <script src="scripts/directives/essayhighlight.js"></script>
+  <script src="scripts/directives/essayannotate.js"></script>
+
   <script src="scripts/controllers/twitter.js"></script>
   <!-- endbuild -->
 </body>
