--- a/client/app/index.html
+++ b/client/app/index.html
@@ -45,11 +45,11 @@
           <ul class="nav navbar-nav">
             <li ng-class="{ active: isActive('/')}"><a href="#/">Home</a></li>
             <!--<li ng-class="{ active: isActive('/concepts')}"><a ng-href="#/concepts">Concepts</a></li> -->
-            <li ng-class="{ active: isActive('/assignments')}"><a ng-href="#/assignments">Assignments</a></li>
+            <li ng-if="isLoggedIn()" ng-class="{ active: isActive('/assignments')}"><a ng-href="#/assignments">Assignments</a></li>
             <!-- <li ng-class="{ active: isActive('/articles')}"><a ng-href="#/articles">NY Times</a></li> -->
-            <li ng-class="{ active: isActive('/submissions')}"><a ng-href="#/submissions">Submissions</a></li>
+            <li ng-if="isLoggedIn()" ng-class="{ active: isActive('/submissions')}"><a ng-href="#/submissions">Submissions</a></li>
             <!--<li ng-class="{ active: isActive('/twitter')}"><a ng-href="#/twitter">Twitter</a></li> -->
-            <li ng-class="{ active: isActive('/themes')}"><a ng-href="#/themes">Themes</a></li>
+            <li ng-if="isLoggedIn()" ng-class="{ active: isActive('/themes')}"><a ng-href="#/themes">Themes</a></li>
             <li ng-class="{ active: isActive('/about')}"><a ng-href="#/about">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -73,7 +73,6 @@
       <p><span class="glyphicon glyphicon-heart"></span> from the EssayIQ Team</p>
     </div>
   </div>
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
   <script>
     ! function(A, n, g, u, l, a, r) {
       A.GoogleAnalyticsObject = l, A[l] = A[l] || function() {
@@ -81,7 +80,6 @@
         }, A[l].l = +new Date, a = n.createElement(g),
         r = n.getElementsByTagName(g)[0], a.src = u, r.parentNode.insertBefore(a, r)
     }(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
     ga('create', 'UA-75668610-1', 'auto');
     ga('send', 'pageview');
   </script>
@@ -109,9 +107,9 @@
   <script src="bower_components/d3-tip/index.js"></script>
   <script src="bower_components/topojson/topojson.js"></script>
   <script src="bower_components/angular-busy/dist/angular-busy.js"></script>
-  <!-- endbower -->
-  <!-- endbuild -->
-  <!-- build:js({.tmp,app}) scripts/scripts.js -->
+  <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
+  <script src="bower_components/chart.js/dist/Chart.js"></script>
+  <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/about.js"></script>
@@ -153,7 +151,6 @@
   <script src="scripts/directives/dirhighlight.js"></script>
   <script src="scripts/directives/essayhighlight.js"></script>
   <script src="scripts/directives/essayannotate.js"></script>
-
   <script src="scripts/controllers/twitter.js"></script>
   <!-- endbuild -->
 </body>
